# location-history-json-converter

./: .gitignore  CONTRIBUTORS.md  LICENSE  README  README.md  latitude_json_converter.py  location_history_json_converter.py  pyproject.toml  requirements.txt
docs/.ipynb_checkpoints/: An example of the Location Coverter-checkpoint.ipynb
docs/tutorial/.ipynb_checkpoints/: An example of the Location Coverter-checkpoint.ipynb
